creating landing page to practice hmtl and css

--- a/index.html
+++ b/index.html
@@ -3,16 +3,82 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Landing Page</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <div class="header-panel">
+        <p class="logo">Header Logo</p>
+        <div class="links">
+          <p><a href="">header link one</a></p>
+          <p><a href="">header link two</a></p>
+          <p><a href="">header link three</a></p>
+        </div>
+      </div>
+
+      <div class="hero">
+        <div class="hero-text">
+          <p class="main-text">This website is awesome</p>
+          <p class="secondary-text">
+            This website has some subtext that goes here under the main title.
+            "It's a smaller font and the color is lower contrast.
+          </p>
+          <input class="butt" type="button" value="Sign up" />
+        </div>
+        <div class="placeholder">
+          <p>this is a placeholder for an image</p>
+        </div>
+      </div>
+    </header>
     <main>
-      <section class="sec1"></section>
-      <section class="sec2"></section>
-      <section class="sec3"></section>
-      <section class="sec4"></section>
+      <section class="sec2">
+        <p class="info">Some random information.</p>
+        <div class="img-container">
+          <div>
+            <p class="img-border"></p>
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+          <div>
+            <p class="img-border"></p>
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+          <div>
+            <p class="img-border"></p>
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+          <div>
+            <p class="img-border"></p>
+            <p>This is some subtext under an illustration or image</p>
+          </div>
+        </div>
+      </section>
+      <section class="sec3">
+        <p>
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows? All I know is that it looks nice.
+        </p>
+        <p class="thor">-Thor, God of Thunder</p>
+      </section>
+      <section class="sec4">
+        <div class="sec4-border">
+          <div class="sec4-pfs">
+            <p class="action">Call to action! It's time!</p>
+            <p>
+              Sign up for our product by clicking that button right over there !
+            </p>
+          </div>
+          <input class="sec4-button" type="button" value="Sign up" />
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer><p>Copyright C Bartosz Rezmer 2023</p></footer>
   </body>
 </html>
